--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,20 @@
   animation: backgroundimg-animate 400s linear infinite;
 }
 
+.popupshell {
+  background-image: url('./imgs/GreenTerminalBackground.png');
+  z-index: 20;
+  position: fixed;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 80vw;
+  height: 90vh;
+  margin: auto;
+  font-size: x-large;
+  color: #088036;
+  
+}
+
 .starfieldbottom {
   background-size: cover;
   max-width: 100vw;
@@ -27,7 +41,7 @@
 
 .Freighterimg {
   object-fit: scale-down;
-  position: fixed;
+  position: relative;
   max-width: 80vw;
   max-height: 80vh;
   z-index: 2;
@@ -36,9 +50,10 @@
 .cont {
   align-items: center;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   margin: auto;
   height: 100vh;
+  width: 100vw
 }
 
 body {
@@ -50,19 +65,26 @@ body {
   min-width: 100%;
 }
 
+.animation {
+  animation: Starfield-background 4s linear infinite;
+}
+
 .StarfieldClass {
+  background-image: url("./imgs/StarfieldLong.png");
   background-size: cover;
   background-position: 0 0;
   background-attachment: unset;
   min-height: 100%;
   min-width: 100%;
-  z-index: 1;
+  z-index: 0;
   overflow: hidden;
   position: absolute;
+  align-items: center;
+  justify-content: center;
 
   background-repeat: repeat-y;
 
-  animation: Starfield-background 30s linear infinite;
+  
 }
 
 .contain {
